<resources>
    <string name="app_name">EchoApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">TODO</string>
    <string name="Nuovo">Nuovo</string>
    <string name="Impostazioni">Impostazioni</string>
    <string name="utente">Utente</string>
    <string name="treedom">TreeDom</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="non_sei_ancora_registrato">Non sei ancora registrato ?</string>
    <string name="registrati">REGISTRATI</string>
    <string name="accedi">ACCEDI</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="cognome">Cognome</string>
    <string name="nome">Nome</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="registrazione">REGISTRAZIONE</string>
    <string name="n_immobili">N° Immobili</string>
    <string name="n_auto">N° Auto</string>
    <string name="n_utenze_totali">N° Utenze Totali</string>
</resources>