<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
            android:layout_width="290dp"
            android:layout_height="65dp"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"
            android:id="@+id/Email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintVertical_bias="0.29" android:autofillHints=""/>
    <EditText
            android:layout_width="290dp"
            android:layout_height="65dp"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/Password"
            android:id="@+id/Password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.412" android:autofillHints=""/>
    <Button
            android:text="@string/accedi"
            android:layout_width="175dp"
            android:layout_height="50dp" android:id="@+id/buttonAccedi"
            android:background="@color/teal_700"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.53" app:layout_constraintHorizontal_bias="0.508"/>
    <Button
            android:text="@string/registrati"
            android:layout_width="175dp"
            android:layout_height="50dp" android:id="@+id/buttonRegistrati"
            android:background="@color/teal_700"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.788"/>
    <TextView
            android:text="@string/non_sei_ancora_registrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/text1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.718"/>

</androidx.constraintlayout.widget.ConstraintLayout>